# unasync-cli

./: .all-contributorsrc  .coveragerc  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
search/: search_index.json
tests/: test_unasync_cli.py
unasync_cli/: __main__.py  main.py
